# ssm-schematic-gen

./: .gitignore  AGENT.md  LICENSE  README.md  biquad_symbolic.dot  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: biquad_symbolic.yaml  numeric_3rd_order.json
scripts/: dev_setup.sh
src/ssschem/: __init__.py  cli.py  formats.py  graph.py  model.py  parse.py  render.py
tests/: test_cli.py  test_graph.py  test_parse.py
